--- a/turbo.json
+++ b/turbo.json
@@ -29,6 +29,10 @@
         "NEXT_PUBLIC_FEEDBACK_EMAIL",
         "NODE_ENV",
         "NOREPLY_EMAIL",
+        "OIDC_DISCOVERY_URL",
+        "OIDC_CLIENT_ID",
+        "OIDC_CLIENT_SECRET",
+        "NEXT_PUBLIC_OIDC_NAME",
         "PORT",
         "SECRET_PASSWORD",
         "SENTRY_AUTH_TOKEN",
